WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281847
[scroll-animations] setting the `timeline` property via the JS API should override any change to the `animation-timeline` CSS property
https://bugs.webkit.org/show_bug.cgi?id=281847
Summary
[scroll-animations] setting the `timeline` property via the JS API should ove...
Antoine Quint
Reported
2024-10-21 02:12:57 PDT
We need to make sure that `animation-timeline` behaves like other CSS properties related to animations in that it should no longer affect the animation if the `timeline` property is set using the JS API.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-21 02:13:07 PDT
<
rdar://problem/138304343
>
Antoine Quint
Comment 2
2024-10-21 02:14:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35513
EWS
Comment 3
2024-10-21 06:17:04 PDT
Committed
285504@main
(313f0ca79b4a): <
https://commits.webkit.org/285504@main
> Reviewed commits have been landed. Closing PR #35513 and removing active labels.
Fujii Hironori
Comment 4
2024-10-21 13:20:30 PDT
Regressed:
Bug 281861
– REGRESSION(
285504@main
): [ macOS ] imported/w3c/web-platform-tests/scroll-animations/css/animation-timeline-ignored.tentative.html is a constant failure.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug