[scroll-animations] setting the `timeline` property via the JS API should override any change to the `animation-timeline` CSS property https://bugs.webkit.org/show_bug.cgi?id=281847 rdar://138304343

Reviewed by Tim Nguyen.

We make sure that the `animation-timeline` CSS property behaves like other properties related
to animations in that it should no longer affect the animation if the matching JS property, in
this case `timeline`, is set using the JS API.

* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-timeline.tentative-expected.txt:
* Source/WebCore/animation/CSSAnimation.cpp:
(WebCore::CSSAnimation::syncPropertiesWithBackingAnimation):
(WebCore::CSSAnimation::bindingsTimeline const):
(WebCore::CSSAnimation::setBindingsTimeline):
* Source/WebCore/animation/CSSAnimation.h:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::setBindingsTimeline):
* Source/WebCore/animation/WebAnimation.h:
(WebCore::WebAnimation::bindingsTimeline const):
* Source/WebCore/animation/WebAnimation.idl:

Canonical link: https://commits.webkit.org/285504@main