Source/WebCore/animation/CSSAnimation.h
@@ -56,6 +56,8 @@ private:
     void syncPropertiesWithBackingAnimation() final;
     Ref<StyleOriginatedAnimationEvent> createEvent(const AtomString& eventType, std::optional<Seconds> scheduledTime, double elapsedTime, const std::optional<Style::PseudoElementIdentifier>&) final;
 
+    AnimationTimeline* bindingsTimeline() const final;
+    void setBindingsTimeline(RefPtr<AnimationTimeline>&&) final;
     ExceptionOr<void> bindingsPlay() final;
     ExceptionOr<void> bindingsPause() final;
     void setBindingsEffect(RefPtr<AnimationEffect>&&) final;
@@ -72,7 +74,8 @@ private:
         Delay = 1 << 6,
         FillMode = 1 << 7,
         Keyframes = 1 << 8,
-        CompositeOperation = 1 << 9
+        CompositeOperation = 1 << 9,
+        Timeline = 1 << 10
     };
 
     String m_animationName;
